# socket-cli

./: CMakeLists.txt  README.md  main.cpp
include/: BoostAsioSimpleClient.h  ConcurrentClient.h  IterativeClient.h  SimpleClient.h
src/: BoostAsioSimpleClient.cpp  ConcurrentClient.cpp  IterativeClient.cpp  SimpleClient.cpp  main.cpp
